<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/userName"
        android:orderInCategory="100"
        app:showAsAction="ifRoom"
        android:title=""/>

    <item
        android:id="@+id/profile"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:title="@string/user_profile"/>

    <item
        android:id="@+id/search"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:title="@string/find_restaurant" />
    <item
        android:id="@+id/results"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:title="@string/results"
        android:visible="true" />

    <item
        android:id="@+id/menu_item_logout"
        android:orderInCategory="100"
        android:title="@string/action_logout"
        app:showAsAction="never"/>
</menu>
