<!--
  ~ Master Thesis project
  ~ All rights reserved
  ~ Created by Norbert Kozera <nkozera@gmail.com>
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="pl.nkozera.mastersthesis.LoginActivity">

    <ProgressBar
        android:id="@+id/login_progress"
        style="@android:style/Widget.ProgressBar.Large"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <RelativeLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="visible">


            <AutoCompleteTextView
                android:id="@+id/displayName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_user_name"
                android:imeActionLabel="@string/action_sign_in_short"
                android:inputType="text"
                android:maxLines="1"
                android:singleLine="true"
                android:visibility="gone" />

            <AutoCompleteTextView
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignWithParentIfMissing="true"
                android:layout_below="@id/displayName"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:singleLine="true" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/email"
                android:hint="@string/prompt_password"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1" />

            <EditText
                android:id="@+id/retype_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/password"
                android:hint="@string/prompt_retypr_password"
                android:imeActionId="6"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true"
                android:visibility="gone" />

            <Button
                android:id="@+id/avatar_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/retype_password"
                android:drawableStart="@drawable/profile_placeholder"
                android:lines="3"
                android:onClick="loadPhotoFromGallery"
                android:text="@string/prompt_avatar"
                android:textAlignment="center"
                android:visibility="gone" />

            <ImageView
                android:id="@+id/loaded_avatar"
                android:layout_width="95dp"
                android:layout_height="95dp"
                android:layout_below="@+id/retype_password"
                android:contentDescription="@string/prompt_avatar"
                android:onClick="loadPhotoFromGallery"
                android:visibility="gone"
                app:srcCompat="@drawable/com_facebook_auth_dialog_cancel_background" />

            <ProgressBar
                android:id="@+id/avatar_progress"
                style="@android:style/Widget.ProgressBar.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/retype_password"
                android:layout_centerHorizontal="false"
                android:layout_centerVertical="false"
                android:layout_marginTop="16dp"
                android:visibility="gone" />


            <Button
                android:id="@+id/email_register_account_button"
                style="?android:textAppearanceSmall"
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/avatar_button"
                android:layout_marginTop="16dp"
                android:onClick="confirmSignUp"
                android:text="@string/action_confirm_registration"
                android:textStyle="bold"
                android:visibility="gone" />

            <Button
                android:id="@+id/email_sign_in_button"
                style="?android:textAppearanceSmall"
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:layout_alignWithParentIfMissing="true"
                android:layout_below="@+id/password"
                android:layout_marginTop="16dp"
                android:onClick="emailSignInOnClick"
                android:text="@string/action_sign_in"
                android:textStyle="bold" />

            <com.google.android.gms.common.SignInButton
                android:id="@+id/google_sign_in_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/email_sign_in_button"
                android:layout_marginTop="16dp" />


            <Button
                android:id="@+id/email_register"
                style="?android:textAppearanceSmall"
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_below="@+id/password"
                android:layout_marginTop="16dp"
                android:onClick="emailRegisterOnClick"
                android:text="@string/action_register"
                android:textStyle="bold" />

            <com.facebook.login.widget.DeviceLoginButton
                android:id="@+id/facebook_register_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/google_sign_in_button"
                android:layout_marginTop="16dp" />


            <Button
                android:id="@+id/continue_withou_signing_in_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/facebook_register_button"
                android:layout_marginTop="16dp"
                android:onClick="firebaseAuthAnonymusly"
                android:text="@string/action_continue_without_signing_in"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/actvity_login_location_denied"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/continue_withou_signing_in_button"
                android:layout_marginTop="30dp"
                android:gravity="center"
                android:onClick="askForLocation"
                android:text="@string/location_denied"
                android:textAlignment="center"
                android:textSize="@dimen/text_20_sp"
                android:visibility="gone" />


        </RelativeLayout>


    </ScrollView>


</RelativeLayout>
