<!--
  ~ Master Thiesis project
  ~ All rights reserved
  ~ Created by Norbert Kozera <nkozera@gmail.com>
  -->


<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="pl.nkozera.mastersthesis.UserProfileActivity">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/user_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="visible">

            <ImageView
                android:id="@+id/avatar_image_view"
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:visibility="visible"
                app:srcCompat="@drawable/profile_placeholder" />

            <TextView
                android:id="@+id/userName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignWithParentIfMissing="false"
                android:layout_below="@id/avatar_image_view"
                android:layout_centerInParent="true"
                android:layout_marginTop="16dp"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/userEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/userName"
                android:layout_centerInParent="true"
                android:layout_marginTop="16dp"
                android:textSize="20sp" />

            <Button
                android:id="@+id/change_pass_button"
                style="?android:textAppearanceSmall"
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:layout_alignWithParentIfMissing="true"
                android:layout_below="@+id/userEmail"
                android:layout_marginTop="16dp"
                android:text="@string/change_pass"
                android:textStyle="bold"
                android:onClick="changePass"
                android:visibility="gone"/>

            <Button
                android:id="@+id/logout_button"
                style="?android:textAppearanceSmall"
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_below="@+id/userEmail"
                android:gravity="center"
                android:layout_marginTop="16dp"
                android:onClick="logout"
                android:text="@string/action_logout"
                android:textStyle="bold" />


        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/change_pwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone">

            <EditText
                android:id="@+id/old_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:hint="@string/prompt_password"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1" />

            <EditText
                android:id="@+id/new_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:hint="@string/prompt_password"
                android:layout_below="@+id/old_password"
                android:imeActionLabel="@string/prompt_new_password"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1" />

            <EditText
                android:id="@+id/retype_new_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/new_password"
                android:hint="@string/prompt_retype_new_password"
                android:imeActionId="6"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true" />

            <Button
                android:id="@+id/confirm"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_below="@+id/retype_new_password"
                android:layout_marginTop="16dp"
                android:onClick="confirmChangePass"
                android:text="@string/action_confirm_pass_change"
                android:textStyle="bold" />


        </RelativeLayout>
    </RelativeLayout>
</ScrollView>

